# JuodaBalta

./: .gitignore  CMakeLists.txt  LICENCE  README.md
Source/Fixtures/: StartingBoard.h
Source/GTest/: Bishop.cpp  Castling.cpp  EnPassant.cpp  King.cpp  Knight.cpp  LegalMoves.cpp  Pawn.cpp  Promotion.cpp  Queen.cpp  Rook.cpp
Source/JuodaBalta/Private/: Board.cpp  Coordinate.cpp  Enums.cpp  Move.cpp  Primitives.h  Rules.cpp  Solver.cpp
Source/JuodaBalta/Private/Rules/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
Source/JuodaBalta/Public/: Board.h  Coordinate.h  Enums.h  Move.h  Rules.h  Solver.h
Source/PerformanceTest/: Main.cpp
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  install.sh
